faster shell startup

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -8,7 +8,7 @@ print_info() {
     #info "Host" model
     info "Kernel" kernel
     info "Uptime" uptime
-    info "Packages" packages
+    #info "Packages" packages
     info "Shell" shell
     #info "Resolution" resolution
     #info "DE" de
@@ -17,7 +17,7 @@ print_info() {
     #info "Theme" theme
     #info "Icons" icons
     info "Terminal" term
-    info "Terminal Font" term_font
+    #info "Terminal Font" term_font
     info "CPU" cpu
     #info "GPU" gpu
     info "Memory" memory
@@ -781,7 +781,7 @@ image_source=$HOME/".config/neofetch/arcolinux-arc.png"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="auto"
+ascii_distro="ArcoLinux_small"
 
 # Ascii Colors
 #
