--- a/.config/i3/config
+++ b/.config/i3/config
@@ -90,7 +90,7 @@ bindsym $mod+Shift+0 move container to workspace 10; workspace 10
 
 
 ###############################################################################################
-#####                          3 menu's in arcolinux                                     ######
+#####                                   3 menu                                           ######
 ###############################################################################################
 
 # start rofi run
@@ -184,7 +184,6 @@ for_window [urgent=latest] focus
 default_orientation horizontal
 
 # enter fullscreen mode for the focused container
-# Super + F in arcolinux is execute thunar
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
@@ -267,21 +266,13 @@ exec_always --no-startup-id feh --bg-fill ~/Pictures/Wallpaper/421.jpg &
 ###############################################################################################
 
 exec_always --no-startup-id nextcloud --background &
-exec --no-startup-id rundesktop .config/autostart/xdman.desktop &
+#exec --no-startup-id rundesktop .config/autostart/xdman.desktop &
 exec_always kdeconnect-cli --refresh &
 exec --no-startup-id clipmenud &
 
 ###############################################################################################
 ######                          applications keyboard shortcuts                          ######
 ###############################################################################################
-
-#ArcoLinux Tweak Tool
-bindsym control+mod1+e exec --no-startup-id arcolinux-tweak-tool
-
-#conky
-##bindsym $mod+c exec --no-startup-id conky-toggle
-#bindsym control+mod1+Next exec --no-startup-id conky-rotate -n
-#bindsym control+mod1+Prior exec --no-startup-id conky-rotate -p
 
 # terminal
 bindsym $mod+Return exec --no-startup-id kitty;focus
