--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,6 +21,8 @@ selection_background  #4c566a
 url_color             #81a1c1
 cursor                #d8dee9
 
+background_opacity 0.95
+
 # black
 color0   #3b4252
 color8   #4C566A
