--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,20 +1,14 @@
-backend = "glx";
-
 # GLX optimizations
+backend = "glx";
 glx-no-stencil = true;
-# glx-swap-method = 1;
+use-damage = true;
+glx-copy-from-front = false;
+glx-use-copysubbuffermesa = true;
+glx-no-rebind-pixmap = true;
+xrender-sync-fence = true;
 
 # Shadow
 shadow = false;                  # Enabled client-side shadows on windows.
-no-dock-shadow = true;         # Avoid drawing shadows on dock/panel windows.
-no-dnd-shadow = true;           # Don't draw shadows on DND windows.
-# clear-shadow = true;            # Zero the part of the shadow's mask behind the window (experimental).
-shadow-radius = 7;             # The blur radius for shadows. (default 12)
-shadow-offset-x = -7;          # The left offset for shadows. (default -15)
-shadow-offset-y = -7;          # The top offset for shadows. (default -15)
-#shadow-red = 0.0;              # Red color value of shadow. (0.0 - 1.0, defaults to 0)
-#shadow-green = 0.0;            # Green color value of shadow. (0.0 - 1.0, defaults to 0)
-#shadow-blue = 0.0;             # Blue color value of shadow. (0.0 - 1.0, defaults to 0)
  
 # Exclude conditions for shadows.
 # Fix dual shadow on some gtk3 powered applications: "_GTK_FRAME_EXTENTS@:c"
@@ -27,35 +21,31 @@ shadow-exclude = [
 	"n:w:*Chrome*",
 	"n:w:*Chromium*"
 ];
-               #"_GTK_FRAME_EXTENTS@:c"
-# opacity-rule = [ "50:class_g = 'i3-frame'" ];
 
-# https://github.com/chjj/compton/issues/403#issuecomment-274198853
+
+shadow-ignore-shaped = false;   # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
+ 
+# Opacity
+active-opacity = 1.0;
+inactive-opacity = 1.0;
+active-opacity-override = true;
+
 opacity-rule = [
- "100:focused",
   "99:_NET_WM_STATE@[0]:32a = '_NET_WM_STATE_FULLSCREEN'",
   "99:_NET_WM_STATE@[1]:32a = '_NET_WM_STATE_FULLSCREEN'",
   "99:_NET_WM_STATE@[2]:32a = '_NET_WM_STATE_FULLSCREEN'",
   "99:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_FULLSCREEN'",
   "99:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_FULLSCREEN'",
+  "99:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_FULLSCREEN'",
 ];
 
-shadow-ignore-shaped = false;   # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
- 
-# Opacity
-# shadow-opacity = 0.7;                   # The translucency for shadows. (default .75)
-active-opacity = 1.0;
-# menu-opacity = 0.8;                     # The opacity for menus. (default 1.0)
-# frame-opacity = 0.1;                   # Opacity of window titlebars and borders. (0.1 - 1.0)
-#inactive-opacity = 0.5;                # Opacity of inactive windows. (0.1 - 1.0)
-#inactive-opacity-override = true;      # Inactive opacity set by 'inactive-opacity' overrides value of _NET_WM_OPACITY.
- 
-# alpha-step = 0.06;             # XRender backend: Step size for alpha pictures. Increasing it may result in less X resource usage, yYet fading may look bad.
-# inactive-dim = 0.2;                   # Dim inactive windows. (0.0 - 1.0)
-# inactive-dim-fixed = true;            # Do not let dimness adjust based on window opacity.
-#blur-background = true;               # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-#blur-background-frame = true;         # Blur background of opaque windows with transparent frames as well.
-#blur-background-fixed = true;        # Do not let blur radius adjust based on window opacity.
+
+# Blur
+blur-background = true;               # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
+blur-method = "dual_kawase";
+blur-strength = 3;
+blur-kern = "7x7gaussian";
+blur-background-fixed = true;
 #blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ]; # Exclude conditions for background blur.
 #blur-kern = "11x11gaussian";
  
