--- a/.local/share/applications/vis.desktop
+++ b/.local/share/applications/vis.desktop
@@ -2,6 +2,8 @@
 Version=1.0
 Type=Application
 Name=Vis
+Comment=Music Visualizer
 Icon=terminal
 Exec=kitty -e vis
+Category=visualizer;terminal;tui;music
 Terminal=false
