mpd ncmpcpp, minor fix

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -256,7 +256,7 @@ exec --no-startup-id volumeicon &
 #exec --no-startup-id conky -c ~/.config/i3/system-overview
 
 #feh sets wallpaper
-exec_always --no-startup-id feh --bg-fill ~/Pictures/Wallpaper/24.jpg &
+exec_always --no-startup-id feh --bg-fill ~/Pictures/Wallpaper/nord2.jpg &
 
 ###############################################################################################
 #####                                 system applications                               #######
