--- a/.config/cava/config
+++ b/.config/cava/config
@@ -2,7 +2,6 @@
 
 
 [general]
-framerate = 60
 autosens = 1
 
 bars = 0
@@ -10,8 +9,8 @@ bar_width = 2
 bar_spacing = 1
 
 
-lower_cutoff_freq = 60
-higher_cutoff_freq = 17000
+lower_cutoff_freq = 40
+higher_cutoff_freq = 11000
 
 
 [input]
@@ -26,8 +25,8 @@ method = ncurses
 # 'stereo' mirrors both channels with low frequencies in center.
 # 'mono' outputs left to right lowest to highest frequencies.
 # 'mono_option' set mono to either take input from 'left', 'right' or 'average'.
-channels = stereo
-; mono_option = average
+channels = mono
+mono_option = average
 
 # Raw output target. A fifo will be created if target does not exist.
 ; raw_target = /dev/stdout
@@ -84,17 +83,17 @@ ignore = 1
 # This one is tricky. You can have as much keys as you want.
 # Remember to uncomment more then one key! More keys = more precision.
 # Look at readme.md on github for further explanations and examples.
-1 = 3.5
-2 = 3.5
-3 = 3.5
-4 = 3
-5 = 3
-6 = 3
-7 = 3
-8 = 2
-9 = 2
-10 = 2
-11 = 2
-12 = 1
-13 = 1
-14 = 1
+1 = 3
+2 = 2.7
+3 = 2.4
+4 = 2.1
+5 = 1.3
+6 = 1
+7 = 1
+8 = 1
+9 = 1
+10 = 1
+11 = 0.7
+12 = 0.6
+13 = 0.4
+14 = 0.3
