--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -48,6 +48,18 @@ blur-kern = "7x7gaussian";
 blur-background-fixed = true;
 #blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'" ]; # Exclude conditions for background blur.
 #blur-kern = "11x11gaussian";
+
+blur-background-exclude = [
+  # prevents picom from blurring the background
+  # when taking selection screenshot with `main`
+  # https://github.com/naelstrof/maim/issues/130
+  "class_g = 'zoom'",
+  "class_g = 'Peek'",
+  "class_g = 'i3-frame'",
+  "class_g = 'flameshot'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
+
  
 # Fading
 fading = true;                  # Fade windows during opacity changes.
